# routes/index.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/president', require('./president'));
-router.use('/theme', require('./theme'));
+router.use('/apostle', require('./apostle'));
+//router.use('/theme', require('./theme'));
 
 module.exports = router;
